--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -108,6 +108,9 @@
                 android:id="@+id/action_profileFragment_to_editProfileFragment"
                 app:destination="@id/editProfileFragment" />
         </fragment>
+        <action
+            android:id="@+id/action_global_fragmentViewFullRecipe"
+            app:destination="@id/fragmentViewFullRecipe" />
     </navigation>
     <navigation android:id="@+id/authentication"
         app:startDestination="@id/authenticationFragment">
