--- a/app/src/main/res/layout/fragment_recipe_author_profile_fragment.xml
+++ b/app/src/main/res/layout/fragment_recipe_author_profile_fragment.xml
@@ -19,12 +19,25 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
 
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="@drawable/ic_arrow_back"
+        app:navigationIconTint="@color/neutral_white"
+        app:title="User Profile"
+        app:titleCentered="true"
+        app:titleTextColor="@color/neutral_white" />
+
     <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/profilePictureCIV"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginHorizontal="120dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="24dp"
         android:src="@drawable/cat_profile"
         app:civ_border_width="2dp"
         app:civ_shadow="true"
@@ -33,7 +46,7 @@
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
     <TextView
         android:id="@+id/userFullNameTV"
@@ -114,20 +127,14 @@
         app:layout_constraintTop_toBottomOf="@id/followUserProfile" />
 
     <androidx.recyclerview.widget.RecyclerView
-        tools:listitem="@layout/feed_list_item"
-        android:layout_marginTop="8dp"
-        android:id="@+id/recipesListRV"
+        android:id="@+id/recipeListRV"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/bottomNavigationBarCL"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/divider" />
-
-    <include
-        android:id="@+id/bottomNavigationBarCL"
-        layout="@layout/bottom_navigation_layout"
+        android:layout_marginHorizontal="2dp"
+        android:layout_marginVertical="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/divider"
+        tools:listitem="@layout/feed_list_item" />
 </androidx.constraintlayout.widget.ConstraintLayout>
