--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -208,4 +208,11 @@
         <item name="backgroundTint">@android:color/transparent</item>
         <item name="android:textColor">@color/neutral_white</item>
     </style>
+
+    <style name="SearchTextInputEditTextStyle" parent="Widget.AppCompat.EditText">
+        <item name="boxStrokeColor">@color/searchTextBox_color</item>
+        <item name="backgroundTint">@color/primary_orange</item>
+        <item name="android:textColor">@color/neutral_white</item>
+        <item name="android:textColorHint">@color/neutral_white</item>
+    </style>
 </resources>
