--- a/app/src/main/res/layout/fragment_recipe_author_profile_fragment.xml
+++ b/app/src/main/res/layout/fragment_recipe_author_profile_fragment.xml
@@ -38,7 +38,7 @@
         android:layout_height="0dp"
         android:layout_marginHorizontal="120dp"
         android:layout_marginTop="24dp"
-        android:src="@drawable/cat_profile"
+        tools:src="@drawable/cat_profile"
         app:civ_border_width="2dp"
         app:civ_shadow="true"
         app:civ_shadow_color="#3A3B42"
@@ -136,5 +136,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/divider"
-        tools:listitem="@layout/feed_list_item" />
+        tools:listitem="@layout/recipe_collection_grid_item" />
 </androidx.constraintlayout.widget.ConstraintLayout>
