--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,172 +1,184 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:fillViewport="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:fillViewport="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/main_background">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/main_background">
 
             <Button
-                android:id="@+id/goBackLoginBtn"
-                style="@style/Button2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="40dp"
-                android:backgroundTint="@null"
-                android:text="@string/back_button_text"
-                app:icon="@drawable/ic_left_arrow"
-                app:layout_constraintBottom_toTopOf="@+id/authenticationActionsCV"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/authenticationActionsCV"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/bg_rounded_top_card_view"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
-
-                <TextView
-                    android:id="@+id/welcomeTV"
-                    style="@style/Heading2"
-                    android:layout_width="0dp"
+                    android:id="@+id/goBackLoginBtn"
+                    style="@style/Button2"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="60dp"
-                    android:layout_marginTop="48dp"
-                    android:layout_marginBottom="48dp"
-                    android:text="@string/loginText"
-                    android:textAlignment="center"
-                    android:textColor="@color/primary_orange"
-                    app:layout_constraintBottom_toTopOf="@id/emailTV"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="40dp"
+                    android:backgroundTint="@null"
+                    android:text="@string/back_button_text"
+                    app:icon="@drawable/ic_left_arrow"
+                    app:layout_constraintBottom_toTopOf="@+id/authenticationActionsCV"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    android:id="@+id/emailTV"
-                    style="@style/RegularText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/emailText"
-                    android:textAllCaps="true"
-                    android:textColor="@color/dark_orange"
-                    app:layout_constraintBottom_toTopOf="@id/emailTIL"
-                    app:layout_constraintStart_toStartOf="@id/welcomeTV" />
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/emailTIL"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/authenticationActionsCV"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginBottom="48dp"
-                    app:boxBackgroundMode="none"
-                    app:layout_constraintBottom_toTopOf="@id/passwordTV"
-                    app:layout_constraintEnd_toEndOf="@id/welcomeTV"
-                    app:layout_constraintStart_toStartOf="@id/welcomeTV">
+                    android:background="@drawable/bg_rounded_top_card_view"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
+
+                <TextView
+                        android:id="@+id/welcomeTV"
+                        style="@style/Heading2"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="60dp"
+                        android:layout_marginTop="48dp"
+                        android:layout_marginBottom="48dp"
+                        android:text="@string/loginText"
+                        android:textAlignment="center"
+                        android:textColor="@color/primary_orange"
+                        app:layout_constraintBottom_toTopOf="@id/emailTV"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                        android:id="@+id/emailTV"
+                        style="@style/RegularText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/emailText"
+                        android:textAllCaps="true"
+                        android:textColor="@color/dark_orange"
+                        app:layout_constraintBottom_toTopOf="@id/emailTIL"
+                        app:layout_constraintStart_toStartOf="@id/welcomeTV" />
+
+                <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/emailTIL"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="0dp"
+                        android:layout_marginBottom="48dp"
+                        app:boxBackgroundMode="none"
+                        app:layout_constraintBottom_toTopOf="@id/passwordTV"
+                        app:layout_constraintEnd_toEndOf="@id/welcomeTV"
+                        app:layout_constraintStart_toStartOf="@id/welcomeTV">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/emailTIEE"
-                        android:inputType="textEmailAddress"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/bg_rounded_edit_text" />
+                            android:id="@+id/emailTIEE"
+                            android:inputType="textEmailAddress"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/bg_rounded_edit_text" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
-                    android:id="@+id/passwordTV"
-                    style="@style/RegularText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/passwordText"
-                    android:textAllCaps="true"
-                    android:textColor="@color/dark_orange"
-                    app:layout_constraintBottom_toTopOf="@id/passwordTIL"
-                    app:layout_constraintStart_toStartOf="@id/welcomeTV" />
+                        android:id="@+id/passwordTV"
+                        style="@style/RegularText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/passwordText"
+                        android:textAllCaps="true"
+                        android:textColor="@color/dark_orange"
+                        app:layout_constraintBottom_toTopOf="@id/passwordTIL"
+                        app:layout_constraintStart_toStartOf="@id/welcomeTV" />
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/passwordTIL"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginBottom="48dp"
-                    app:boxBackgroundMode="none"
-                    app:layout_constraintBottom_toTopOf="@id/loginBtn"
-                    app:layout_constraintEnd_toEndOf="@id/welcomeTV"
-                    app:layout_constraintStart_toStartOf="@id/welcomeTV">
+                        android:id="@+id/passwordTIL"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="0dp"
+                        android:layout_marginBottom="48dp"
+                        app:boxBackgroundMode="none"
+                        app:layout_constraintBottom_toTopOf="@id/loginBtn"
+                        app:layout_constraintEnd_toEndOf="@id/welcomeTV"
+                        app:layout_constraintStart_toStartOf="@id/welcomeTV">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:inputType="textPassword"
-                        android:id="@+id/passwordTIEE"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/bg_rounded_edit_text" />
+                            android:inputType="textPassword"
+                            android:id="@+id/passwordTIEE"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/bg_rounded_edit_text" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <Button
-                    android:id="@+id/loginBtn"
-                    style="@style/PrimaryButton"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="60dp"
-                    android:layout_marginBottom="8dp"
-                    android:text="Login"
-                    app:layout_constraintBottom_toTopOf="@id/noAccountTV"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
+                        android:id="@+id/loginBtn"
+                        style="@style/PrimaryButton"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="60dp"
+                        android:layout_marginBottom="8dp"
+                        android:text="Login"
+                        app:layout_constraintBottom_toTopOf="@id/noAccountTV"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" />
 
                 <TextView
-                    android:id="@+id/noAccountTV"
-                    style="@style/SmallText"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="Don't have an account?"
-                    android:textColor="@color/smallText_color"
-                    app:layout_constraintBottom_toTopOf="@id/signUpTV"
-                    app:layout_constraintEnd_toEndOf="@id/loginBtn"
-                    app:layout_constraintStart_toStartOf="@id/loginBtn" />
+                        android:id="@+id/noAccountTV"
+                        style="@style/SmallText"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="Don't have an account?"
+                        android:textColor="@color/smallText_color"
+                        app:layout_constraintBottom_toTopOf="@id/signUpTV"
+                        app:layout_constraintEnd_toEndOf="@id/loginBtn"
+                        app:layout_constraintStart_toStartOf="@id/loginBtn" />
 
                 <TextView
-                    android:id="@+id/signUpTV"
-                    style="@style/SmallText"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="48dp"
-                    android:text="@string/sign_up_text_underlined"
-                    android:textColor="@color/smallText_color"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@id/loginBtn"
-                    app:layout_constraintStart_toStartOf="@id/loginBtn" />
+                        android:id="@+id/signUpTV"
+                        style="@style/SmallText"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/sign_up_text_underlined"
+                        android:layout_marginBottom="8dp"
+                        android:textColor="@color/smallText_color"
+                        app:layout_constraintBottom_toTopOf="@id/resetPasswordTV"
+                        app:layout_constraintEnd_toEndOf="@id/loginBtn"
+                        app:layout_constraintStart_toStartOf="@id/loginBtn" />
+
+                <TextView
+                        android:id="@+id/resetPasswordTV"
+                        style="@style/SmallText"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="44dp"
+                        android:text="@string/forgot_password"
+                        android:textColor="@color/smallText_color"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="@id/loginBtn"
+                        app:layout_constraintStart_toStartOf="@id/loginBtn" />
 
                 <com.google.android.material.progressindicator.CircularProgressIndicator
-                    android:id="@+id/isLoadingCIP"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:indeterminate="true"
-                    android:visibility="gone"
-                    app:indicatorColor="@color/dark_orange"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:visibility="visible" />
+                        android:id="@+id/isLoadingCIP"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:indeterminate="true"
+                        android:visibility="gone"
+                        app:indicatorColor="@color/dark_orange"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:visibility="visible" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
