Last commit for some time

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -25,7 +25,7 @@
         android:layout_height="0dp"
         android:layout_marginHorizontal="120dp"
         android:layout_marginTop="64dp"
-        android:src="@drawable/cat_profile"
+        android:src="@drawable/cooking_cat"
         app:civ_border_width="2dp"
         app:civ_shadow="true"
         app:civ_shadow_color="#3A3B42"
@@ -82,7 +82,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="25"
+        android:text="0"
         android:textAlignment="center"
         android:textColor="@color/neutral_white"
         app:layout_constraintEnd_toEndOf="@id/postedTV"
@@ -181,7 +181,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:backgroundTint="@null"
         android:id="@+id/collectionRV"
-        tools:listitem="@layout/tag_list_item"
+        tools:listitem="@layout/tag_item"
         android:layout_margin="4dp"
         android:layout_width="0dp"
         android:layout_height="0dp"
